Alignment defect fix

--- a/WFHTool - JavaScript/src/css/homepage.css
+++ b/WFHTool - JavaScript/src/css/homepage.css
@@ -9,8 +9,11 @@ body {
 }
 
 body {
+	margin: 10px !important;
+
 	overflow-y: auto;
-	padding: 15px 15px 0px 15px;
+	justify-content: center;
+	font-size: small !important;
 }
 
 p {
@@ -26,14 +29,14 @@ p {
 	box-sizing: border-box;
 }
 
-.card {
+#card {
 	display: flex;
 	word-wrap: break-word;
 	justify-content: center;
 	align-items: center;
 	width: max-content;
-	height: 40px;
-	width: 270px;
+	height: 80px;
+	width: 260px;
 	padding: 10px;
 	background-color: #ffffff;
 	box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.315);
@@ -42,7 +45,7 @@ p {
 	-o-box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.6);
 	border-radius: 5px;
 }
-.card:hover {
+#card:hover {
 	transition: all 0.3s ease-out;
 	box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
 	top: -4px;
@@ -50,6 +53,8 @@ p {
 	background-color: white;
 }
 .ptext {
+	text-align: center;
+	margin-bottom: 0px !important;
 	font-size: medium;
 }
 
@@ -57,10 +62,12 @@ p {
 	text-align: center;
 }
 .maincontainer {
+	width: 1150px;
 	display: flex;
 	flex-flow: row wrap;
 	padding-top: 10px;
-	justify-content: space-between;
+	padding-bottom: 0px !important;
+	justify-content: space-around;
 }
 
 .columnd {
@@ -117,30 +124,32 @@ pre {
 }
 
 .firstcolumn {
+	height: 480px;
 	display: flex;
 	justify-self: center;
-	width: 300px;
-	padding-right: 10px;
-	padding-left: 0px !important;
-	padding-bottom: 10px;
+	padding-right: 10px !important;
+	padding-left: 15px !important;
 }
 .secondcolumn {
-	padding-left: 10px;
-	padding-right: 5px;
-	width: 520px;
-	padding-bottom: 10px;
+	height: 510px;
+	padding-right: 10px !important;
+	padding-bottom: 10px !important;
 }
 
 .thirdcolumn {
-	padding-left: 10px;
-	flex-grow: 8;
-	padding-bottom: 10px;
+	padding-right: 10px !important;
+	padding-bottom: 10px !important;
+}
+.container {
+	padding-right: 0px !important;
+	padding-left: 0px !important;
+	margin-right: 0px !important;
+	margin-left: 0px !important;
 }
 .grid-container {
 	display: grid;
 	grid-template-columns: [first] 40px [line2] 200px [line3] 200px [end];
 	grid-template-rows: [row1-start] 10% [row1-end] 200px [third-line] 200px [last-line];
-	padding: 10px;
 }
 .grid-item {
 	color: white;
